# SimpleEngine

./: .gitmodules  CMakeLists.txt  CubeBatch.cpp  CubeBatch.h  Engine.cpp  Engine.h  Entity.h  Environment.h  FrameAnimation.cpp  FrameAnimation.h  GMath.cpp  GMath.h  Game.cpp  Game.h  IUpdateDraw.h  InputManager.cpp  InputManager.h  Logger.h  Pos.h  Random.cpp  Random.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Singleton.h  SpriteBatch.cpp  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  defines.h  global.h  image.h  main.cpp  program.cpp  (+1 more)
Components/: BaseComponent.cpp  BaseComponent.h  TransformComponent.cpp  TransformComponent.h
Data/: baidupan.txt
Event/: Event.h
Network/: Client.cpp  Client.h  Message.cpp  Message.h
Objects/: MapObject.cpp  MapObject.h  Object.cpp  Object.h  Object.inl
Projects/: Astar.cpp  Astar.h  Config.cpp  Config.h  Demo.cpp  Demo.h  GameMap.cpp  GameMap.h  Heap.h  Player.cpp  Player.h  Pos.h  TestNetwork.cpp  TestNetwork.h  TestSence.cpp  TestSence.h  config.txt  game.cpp  game.h  mhxy.h  program.cpp
Shader/: Mvp3DFragmentShader  Mvp3DVertexShader  MvpFragmentShader  SimpleFragmentShader.frag
docs/: class_intro.md  类关系简明介绍.md
